solve css problem: Input label(or `Prefix` will overlapped)

--- a/front/src/app/components/common/input/index.less
+++ b/front/src/app/components/common/input/index.less
@@ -27,6 +27,9 @@
     align-items: flex-end;
 
     &__prefix {
+        // width: 220px;
+        // text-align: left;
+        white-space: nowrap;
         margin: 0 5px 0 0;
         padding: 0;
         color: var(--color-prefix);
